🐛 Fix: Fix create ticket bug